<resources>
    <string name="app_name">Shree shankar Aashram ni Seva</string>
    <string name="name"> </string>
    <string name="pahoch"> પહોંચ</string>
    <string name="bhavdiya">ભવદિય શ્રી </string>
    <string name="smarnanthe">સ્મરણાર્થે</string>
    <string name="tithi">તિથી / તારીખ </string>
    <string name="sarnamu">સરનામું </string>
    <string name="mobilenumber">મોબાઈલ નંબર </string>
    <string name="thankyou">સપ્રેમ ભેટ મળ્યા છે . આપનો હૃદયપૂર્વક આભાર </string>
    <string name="bhatt">ચંદ્રમણી કે ભટ્ટ </string>
    <string name="svikarnar">સ્વીકારનાર</string>
    <string name="bhet">ભેટ</string>
</resources>